--- a/vue2/public/index.html
+++ b/vue2/public/index.html
@@ -15,12 +15,11 @@
   <script src="/dist/vue.js"></script>
   <!--
     模板编译原理 AST语法树 (树的遍历) 先标识出html -> js语法
-
-    1. 需要将模板变成一个render函数, render(){ return _l(3, _c('li', {}, name)) }
-        template模板 => ast语法树(描述语法的) => render函数 => 虚拟dom
-    2. 需要去当前实例上取值 with
-    3. 虚拟dom -> (其实就是一个对象), 可以描述dom结构(diff算法)
-    4. 要生成一个真实的dom结构扔到页面中
+    1. 对数据进行了拦截, 对象 数据 (依赖收集)
+    2. template变成一个render函数, render(){ return _l(3, _c('li', {}, name)) }
+       :) template模板 => ast语法树(描述语法的) => render函数 => 虚拟dom
+      * 虚拟dom -> (其实就是一个对象), 可以描述dom结构(diff算法)
+    3. new Vue时会产生一个watcher(渲染watcher), 作用: vm._update(vm._render()) 用虚拟dom创建真实dom
   -->
   <div id="app" a="1" b='2'>
     <ul style="color:red;font-weight:700;">
@@ -51,14 +50,15 @@
     })
     setTimeout(() => {
       // 这里取值没有依赖模板, 所以不需要依赖收集
-      // vm.name = '测试'
+      vm.name = '测试'
+      // vm.address = '测试'
       // vm.$nextTick(() => {
       //   console.log(vm.$options.el.innerHTML)
       // })
       // vm._update(vm._render()); // 强制更新的方法
       
       // 数组的依赖收集
-      vm.arr[0].push(56)
+      // vm.arr[0].push(56)
     }, 1000)
   </script>
 </body>
