--- a/vue2/public/index.html
+++ b/vue2/public/index.html
@@ -4,62 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vue2.0源码解析</title>
-  <style>
-    .green{
-      color: green;
-    }
-  </style>
+  <title>组建的合并策略</title>
 </head>
 <body>
-  <script src="/dist/vue.js"></script>
-  <!--
-    模板编译原理 AST语法树 (树的遍历) 先标识出html -> js语法
-    1. 对数据进行了拦截, 对象 数据 (依赖收集)
-    2. template变成一个render函数, render(){ return _l(3, _c('li', {}, name)) }
-       :) template模板 => ast语法树(描述语法的) => render函数 => 虚拟dom
-      * 虚拟dom -> (其实就是一个对象), 可以描述dom结构(diff算法)
-    3. new Vue时会产生一个watcher(渲染watcher), 作用: vm._update(vm._render()) 用虚拟dom创建真实dom
-  -->
-  <div id="app" a="1" b='2'>
-    <ul style="color:red;font-weight:700;">
-      <li>{{name}},<a>hello</a></li>
-      <li class="green">haha {{age}}, <a>world</a></li>
-      <li>{{arr}}</li>
-    </ul>
+  <div id="app" style="color: red;font-size: 12px;">
+    <my-button></my-button>
   </div>
+  <script src="/dist/umd/vue.js"></script>
   <script>
-    // 响应式数据变化, 数据代理或者数据劫持(Object.defineProperty)
-    // vue2 基于options Api, 所有的属性都在 options, 缺点: 这种方式没办法 tree-shaking
-    // vue中数组中的对象, 如果变化了, 也需要视图更新
-    // vue更新原理, 就是通过nextTick 异步执行更新视图逻辑
+    // const reg = /[^a-zA-Z\u00B7\u00C0-\u00D6\u00D8-\u00F6\u00F8-\u037D\u037F-\u1FFF\u200C-\u200D\u203F-\u2040\u2070-\u218F\u2C00-\u2FEF\u3001-\uD7FF\uF900-\uFDCF\uFDF0-\uFFFD.$_\d]/
+    // Vue.component => (Vue.extend api) => 返回通过对象创建一个类, 通过这个类创建组件
+    // 先找自己身上是否存在，没有就查找父亲的 __proto__
+    Vue.component("my-button", {
+      template: "<button>外部button</button>",
+    })
     const vm = new Vue({
       el: '#app',
-      data() {
-        return {
-          name: 'Jelly',
-          age: 14,
-          address: '上海',
-          // JSON.stringify()->只要是对象都会更新
-          // 内部会给arr属性增加依赖, 但是我们更改数组时不会去通知更新
-          // arr: [1,2,3]
-          // 外层数组进行了依赖收集, 但是里层数组没有
-          arr: [[1,2,3]]
-        }
+      components: {
+        'my-button': {
+          template: "<button>内部button</button>",
+        },
       }
     })
-    setTimeout(() => {
-      // 这里取值没有依赖模板, 所以不需要依赖收集
-      vm.name = '测试'
-      // vm.address = '测试'
-      // vm.$nextTick(() => {
-      //   console.log(vm.$options.el.innerHTML)
-      // })
-      // vm._update(vm._render()); // 强制更新的方法
-      
-      // 数组的依赖收集
-      // vm.arr[0].push(56)
-    }, 1000)
   </script>
 </body>
 </html>
