--- a/vue2/public/5.index.html
+++ b/vue2/public/5.index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>组建的合并策略</title>
+  <title>组件的合并策略</title>
 </head>
 <body>
   <div id="app" style="color: red;font-size: 12px;">
